--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
     "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "swiper": "6.8.4",
+    "swiper": "^8.1.6",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
