--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "tiktok-ui",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://TuananhDoan.github.io/app-name/",
+    "homepage": "https://aitechchannel.github.io/Practice-Product-tag-ReactJs/",
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.1.1",
         "@fortawesome/fontawesome-svg-core": "^6.1.1",
