--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "babel-plugin-macros": "^3.1.0",
         "bootstrap": "^5.1.3",
         "classnames": "^2.3.1",
+        "d3-ease": "^3.0.1",
         "gh-pages": "^4.0.0",
         "normalize.css": "^8.0.1",
         "react": "^18.1.0",
@@ -24,6 +25,7 @@
         "react-icons": "^4.4.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "react-spring": "^9.4.5",
         "swiper": "^8.1.6",
         "web-vitals": "^2.1.4"
     },
