--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
         "@testing-library/react": "^13.1.1",
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
+        "antd": "^4.21.0",
         "babel-plugin-macros": "^3.1.0",
         "bootstrap": "^5.1.3",
         "classnames": "^2.3.1",
         "d3-ease": "^3.0.1",
+        "formik": "^2.2.9",
         "gh-pages": "^4.0.0",
         "normalize.css": "^8.0.1",
         "react": "^18.1.0",
@@ -31,7 +33,8 @@
         "react-scripts": "5.0.1",
         "react-spring": "^9.4.5",
         "swiper": "^8.1.6",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "babel-plugin-module-resolver": "^4.1.0",
