--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
         "antd": "^4.21.0",
+        "axios": "^0.27.2",
         "babel-plugin-macros": "^3.1.0",
         "bootstrap": "^5.1.3",
+        "chart.js": "^3.8.0",
         "classnames": "^2.3.1",
         "d3-ease": "^3.0.1",
         "formik": "^2.2.9",
         "gh-pages": "^4.0.0",
         "normalize.css": "^8.0.1",
+        "query-string": "^7.1.1",
         "react": "^18.1.0",
         "react-bootstrap": "^2.4.0",
+        "react-chartjs-2": "^4.2.0",
         "react-dom": "^18.1.0",
         "react-icons": "^4.4.0",
         "react-player": "^2.10.1",
