--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "chart.js": "^3.8.0",
         "classnames": "^2.3.1",
         "d3-ease": "^3.0.1",
+        "firebase": "^9.8.3",
         "formik": "^2.2.9",
         "gh-pages": "^4.0.0",
         "normalize.css": "^8.0.1",
@@ -31,6 +32,8 @@
         "react-bootstrap": "^2.4.0",
         "react-chartjs-2": "^4.2.0",
         "react-dom": "^18.1.0",
+        "react-dotenv": "^0.1.3",
+        "react-firebaseui": "^6.0.0",
         "react-icons": "^4.4.0",
         "react-player": "^2.10.1",
         "react-router-dom": "^6.3.0",
