--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "tiktok-ui",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://aitechchannel.github.io/Practice-ReactJS",
+    "homepage": "https://aitechchannel.github.io",
     "dependencies": {
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
